fix generations
