# backend/handlers/api_default.go
@@ -1,14 +1,0 @@
-package handlers
-import (
-	"github.com/GIT_USER_ID/GIT_REPO_ID/models"
-	"github.com/labstack/echo/v4"
-	"net/http"
-)
-
-// GetUser - 
-func (c *Container) GetUser(ctx echo.Context) error {
-	return ctx.JSON(http.StatusOK, models.HelloWorld {
-		Message: "Hello World",
-	})
-}
-
